--- a/src/Bio/Bio.css
+++ b/src/Bio/Bio.css
@@ -86,12 +86,21 @@
     }
 
     .portrait-container {
+        width: 100%;
         justify-content: center;
         padding: 0;
-        height: 320px;
+        height: 400px;
     }
 
     .about-me-content {
+        height: 100%;
+    }
+
+    .bio-description {
+        width: 100%;
+    }
+
+    .bio-container {
         height: 100%;
     }
 }
